--- a/Raya.html
+++ b/Raya.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF -8">
         <title>Selamat Hari Raya Idul Fitri 1446 H</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="Style.css">
     </head>
     <body>
         <section id="particles-js">
