--- a/Raya.html
+++ b/Raya.html
@@ -10,7 +10,7 @@
             <div class="text">
                 <h2>Selamat Hari Raya Idul Adha 1446 H<br></h2>
             </div>
-            <div class="masjid"></div>
+            <div class="png-clipart-mosque-silhouette-mecca-islam-islam-mosque-symmetry-computer-wallpaper"></div>
         </section>
         
         <script src="particles.js"></script>
